--- a/public/assets/css/animation.css
+++ b/public/assets/css/animation.css
@@ -1,10 +1,28 @@
+.profile-wiggle:hover {
+  animation-name: wave-animation;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+}
+
+@keyframes profile-wiggle-animation {
+  0% { transform: rotate( 0.0deg) }
+  15% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+  30% { transform: rotate(-8.0deg) }
+  40% { transform: rotate(14.0deg) }
+  50% { transform: rotate(-4.0deg) }
+  60% { transform: rotate(10.0deg) }
+  70% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+ 100% { transform: rotate( 0.0deg) }
+}
+
 .waving {
     animation-name: wave-animation;
     animation-duration: 2.5s;
     animation-iteration-count: infinite;
     transform-origin: 70% 70%;
   }
-  
+
   @keyframes wave-animation {
     0% { transform: rotate( 0.0deg) }
     15% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
@@ -14,4 +32,17 @@
     60% { transform: rotate(10.0deg) }
     70% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
    100% { transform: rotate( 0.0deg) }
+  }
+
+  .scrollshot:hover {
+    animation-name: scrollshot-animation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    transform-origin: 70% 70%;
+  }
+
+  @keyframes scrollshot-animation {
+    0% { transform: translateY(0%) }  
+    100% { transform: translateY(-50%) }
+    
   }
