--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,4 +3,16 @@
 
 @tailwind base;
 @tailwind components;
-@tailwind utilities
+@tailwind utilities;
+
+.page-enter-active,
+.page-leave-active {
+  transition-property: opacity;
+  transition-timing-function: ease-in-out;
+  transition-duration: 250ms;
+}
+
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
