--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,7 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.page-enter-active,
+/* .page-enter-active,
 .page-leave-active {
   transition-property: opacity;
   transition-timing-function: ease-in-out;
@@ -15,4 +15,4 @@
 .page-enter,
 .page-leave-to {
   opacity: 0;
-}
+} */
